Medical History Fragment design Updated

--- a/app/src/main/res/layout/fragment_medical_history.xml
+++ b/app/src/main/res/layout/fragment_medical_history.xml
@@ -9,7 +9,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/lightGray"
+        android:background="@color/gray"
         android:padding="24dp"
         android:scrollIndicators="none">
 
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:text="@string/medical_status"
                 android:textColor="@color/sky_blue_700"
                 android:textSize="22sp"
@@ -40,7 +40,7 @@
                 android:background="?android:selectableItemBackground"
                 android:button="@null"
                 android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:text="@string/diabetic"
                 android:textColor="@color/darkGray"
                 android:textSize="18sp"
@@ -58,7 +58,7 @@
                 android:background="?android:selectableItemBackground"
                 android:button="@null"
                 android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:text="@string/pressure_patient"
                 android:textColor="@color/darkGray"
                 android:textSize="18sp"
@@ -76,7 +76,7 @@
                 android:background="?android:selectableItemBackground"
                 android:button="@null"
                 android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:text="@string/heart_patient"
                 android:textColor="@color/darkGray"
                 android:textSize="18sp"
@@ -90,7 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:text="@string/blood_type"
                 android:textColor="@color/sky_blue_700"
                 android:textSize="20sp"
@@ -104,7 +104,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@drawable/custom_input"
                 android:entries="@array/blood_type"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:gravity="end|center"
                 android:paddingHorizontal="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -115,7 +115,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:text="@string/gender"
                 android:textColor="@color/sky_blue_700"
                 android:textSize="20sp"
@@ -130,7 +130,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@drawable/custom_input"
                 android:entries="@array/gender"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:gravity="end|center"
                 android:padding="12dp"
                 app:layout_constraintEnd_toEndOf="@+id/Gender_tv"
@@ -145,7 +145,7 @@
                 android:layout_marginTop="32dp"
                 android:background="@drawable/custom_input"
                 android:ems="10"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:gravity="end|center"
                 android:hint="@string/height"
                 android:inputType="number"
@@ -161,7 +161,7 @@
                 android:layout_marginTop="32dp"
                 android:background="@drawable/custom_input"
                 android:ems="10"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:gravity="end|center"
                 android:hint="@string/weight"
                 android:inputType="number"
@@ -178,7 +178,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/custom_input"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:hint="@string/age"
                 android:inputType="number"
                 android:paddingStart="20dp"
@@ -193,7 +193,7 @@
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="24dp"
-                android:fontFamily="@font/katibeh"
+                android:fontFamily="@font/nahdi"
                 android:text="@string/save"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
