--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -3,58 +3,40 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <group android:scaleX="0.26458013"
-      android:scaleY="0.26458013"
-      android:translateX="-12.377272"
-      android:translateY="-30.5625">
+  <group android:scaleX="0.35169375"
+      android:scaleY="0.35169375"
+      android:translateX="21.66"
+      android:translateY="28.036207">
     <path
-        android:pathData="M313.4,442.6H181.7c-31,0 -56.2,-25.1 -56.2,-56.2V254.7c0,-31 25.1,-56.2 56.2,-56.2h131.7c31,0 56.2,25.1 56.2,56.2v131.7C369.6,417.4 344.4,442.6 313.4,442.6z"
-        android:fillColor="#E8E8E8"/>
-    <path
-        android:pathData="M247.6,264L247.6,264c23.8,0 43.4,19.5 43.4,43.4V352h-86.8v-44.6C204.2,283.6 223.7,264 247.6,264L247.6,264z"
-        android:fillColor="#C92518"
+        android:pathData="M91.97,50.54h0A43.52,43.52 0,0 1,135.4 93.94L135.4,138.54L48.59,138.54L48.59,93.94A43.5,43.5 0,0 1,91.97 50.54Z"
+        android:fillColor="#c92518"
         android:fillType="evenOdd"/>
     <path
-        android:pathData="M264.7,267.6c15.4,6.7 26.3,22 26.3,39.8V352h-75.2v-43.1c0,-23 18.9,-41.9 41.9,-41.9l0,0C260,267 262.4,267.2 264.7,267.6L264.7,267.6z"
-        android:fillColor="#DC2C1B"
+        android:pathData="M109.07,54.1A43.51,43.51 0,0 1,135.4 93.94L135.4,138.54L60.14,138.54L60.14,95.42A42,42 0,0 1,102.08 53.54h0a40.46,40.46 0,0 1,7 0.58Z"
+        android:fillColor="#dc2c1b"
         android:fillType="evenOdd"/>
     <path
-        android:pathData="M202.6,352h90c1.7,0 3.1,1.4 3.1,3.1v6h-96.3v-6C199.4,353.4 200.8,352 202.6,352L202.6,352z"
+        android:pathData="M46.95,138.54h90a3.15,3.15 0,0 1,3.15 3.11v6L43.84,147.65v-6a3.12,3.12 0,0 1,3.11 -3.11Z"
         android:fillColor="#313130"
         android:fillType="evenOdd"/>
     <path
-        android:pathData="M216,352h76.6c1.7,0 3.1,1.4 3.1,3.1v6h-82.9v-6C212.8,353.4 214.3,352 216,352L216,352z"
-        android:fillColor="#40484C"
+        android:pathData="M60.4,138.54h76.56a3.15,3.15 0,0 1,3.15 3.11v6L57.25,147.65v-6A3.14,3.14 0,0 1,60.4 138.54Z"
+        android:fillColor="#40484c"
         android:fillType="evenOdd"/>
     <path
-        android:pathData="M254.9,269.5c18.4,2.1 32.8,20.3 32.8,39.3v40.6h-5.1v-40.6C282.5,291.4 270.8,274.1 254.9,269.5L254.9,269.5z"
-        android:fillColor="#F39FA3"
+        android:pathData="M99.3,56.01c18.4,2.1 32.79,20.34 32.79,39.26v40.58h-5.15L126.94,95.27c0,-17.38 -11.71,-34.63 -27.64,-39.26Z"
+        android:fillColor="#f39fa3"
         android:fillType="evenOdd"/>
     <path
-        android:pathData="M247.6,301.9L247.6,301.9c7,0 12.7,5.7 12.7,12.7V352h-25.4v-37.4C234.8,307.6 240.6,301.9 247.6,301.9L247.6,301.9z"
-        android:fillColor="#B72318"
+        android:pathData="M91.97,88.43h0a12.73,12.73 0,0 1,12.69 12.69L104.66,138.54L79.24,138.54L79.24,101.12a12.75,12.75 0,0 1,12.73 -12.69Z"
+        android:fillColor="#b72318"
         android:fillType="evenOdd"/>
     <path
-        android:pathData="M250.4,302.2c5.6,1.3 9.9,6.4 9.9,12.4V352h-19.7v-37.4C240.5,308.6 244.8,303.5 250.4,302.2L250.4,302.2z"
-        android:fillColor="#C92518"
+        android:pathData="M94.8,88.74a12.73,12.73 0,0 1,9.86 12.38L104.66,138.54L84.94,138.54L84.94,101.12a12.74,12.74 0,0 1,9.86 -12.38Z"
+        android:fillColor="#c92518"
         android:fillType="evenOdd"/>
     <path
-        android:pathData="M221.7,255.9c0.6,1.1 0.2,2.5 -0.9,3.2c-1.1,0.6 -2.6,0.3 -3.2,-0.9L200.7,229c-0.6,-1.1 -0.3,-2.6 0.9,-3.2c1.1,-0.6 2.5,-0.2 3.2,0.9L221.7,255.9zM324,258.6c1.1,-0.6 2.6,-0.2 3.2,0.9c0.6,1.1 0.3,2.5 -0.9,3.2l-29.3,16.9c-1.1,0.6 -2.6,0.2 -3.2,-0.9c-0.6,-1.1 -0.3,-2.5 0.8,-3.2L324,258.6zM337.2,303.1c1.3,0 2.3,1 2.3,2.3c0,1.3 -1,2.3 -2.3,2.3h-33.8c-1.3,0 -2.3,-1 -2.3,-2.3c0,-1.3 1,-2.3 2.3,-2.3H337.2zM191.8,303.1c1.3,0 2.3,1 2.3,2.3c0,1.3 -1,2.3 -2.3,2.3h-33.8c-1.3,0 -2.3,-1 -2.3,-2.3c0,-1.3 1,-2.3 2.3,-2.3H191.8zM245.2,215.8c0,-1.3 1,-2.3 2.3,-2.3c1.3,0 2.3,1 2.3,2.3v33.8c0,1.3 -1,2.3 -2.3,2.3c-1.3,0 -2.3,-1 -2.3,-2.3V215.8zM200.4,275.5c1.1,0.6 1.5,2.1 0.9,3.2c-0.6,1.1 -2.1,1.5 -3.2,0.9l-29.3,-16.9c-1.1,-0.6 -1.5,-2.1 -0.9,-3.2c0.6,-1.1 2.1,-1.5 3.2,-0.9L200.4,275.5zM290.3,226.6c0.6,-1.1 2.1,-1.5 3.2,-0.9c1.1,0.6 1.5,2.1 0.9,3.2l-16.9,29.3c-0.6,1.1 -2.1,1.5 -3.2,0.8c-1.1,-0.6 -1.5,-2.1 -0.8,-3.2L290.3,226.6z"
-        android:fillColor="#C92518"/>
-    <path
-        android:pathData="M223.8,423.2H218h-18h-5.7v-5.4v-11.9h5.7v11.9h18c0,-1.2 -0.3,-2 -0.9,-2.4c-0.6,-0.4 -1.5,-0.7 -2.7,-0.7c-2.1,0 -3.5,-0.1 -4.3,-0.3c-0.8,-0.2 -1.6,-0.8 -2.5,-1.8c-0.4,-0.7 -0.7,-1.2 -0.9,-1.6c-0.2,-0.4 -0.4,-0.9 -0.5,-1.5c-0.2,-0.6 -0.3,-1.7 -0.3,-3.3v-9.9c0,-2 0.6,-3.4 1.8,-4.3c1.2,-0.9 2.5,-1.3 3.9,-1.3h5c1.4,0 2.6,0.6 3.6,1.9c0.5,0.7 0.9,1.3 1.1,2c0.2,0.7 0.4,1.4 0.4,2.1v0.5v8.6h-5.8v-8c0,-0.5 -0.2,-0.9 -0.5,-1.3c-0.3,-0.2 -0.7,-0.4 -1.3,-0.6h-0.3c-0.5,0 -1,0.2 -1.3,0.5c-0.4,0.3 -0.6,0.8 -0.6,1.5v5.4l0,1.2l0,1.3l0.1,1.2c0,0.2 0.1,0.3 0.1,0.5c0,0.1 0.1,0.3 0.3,0.5c0.2,0.4 0.8,0.8 1.7,1.2c0.8,0.2 2.1,0.3 3.7,0.3c1.6,0 2.6,0 2.9,0.1c0.4,0.1 0.9,0.4 1.4,1c0.4,0.4 0.9,1.2 1.3,2.3c0.3,0.9 0.5,1.8 0.5,2.5V423.2zM203.1,399h-3.8l3.8,2.7v1.8h-6.4v-1.8h3.8l-3.8,-2.7v-1.9h6.4V399z"
-        android:fillColor="#126A8F"/>
-    <path
-        android:pathData="M235.7,418v11.6h-5.8v-38.9h5.8v21.9V418z"
-        android:fillColor="#126A8F"/>
-    <path
-        android:pathData="M243.1,417.9v-41.5h5.8V418L243.1,417.9z"
-        android:fillColor="#126A8F"/>
-    <path
-        android:pathData="M272.4,418v11.6h-5.8V418h-9.9v-22.2c0,-1.6 0.6,-2.9 1.8,-3.8c1.2,-0.9 2.7,-1.3 4.6,-1.3h9.4l0,22h3.7v5.3H272.4zM266.5,396c-3.1,-0.3 -4.4,0.8 -4.1,3.3v13.3h4.1V396z"
-        android:fillColor="#126A8F"/>
-    <path
-        android:pathData="M300.8,418h-2.5h-22.6l0,-5.3h4.6v-36.2h6v16.8c0.2,0.5 1.1,0.3 2.5,-0.6c1.5,-0.9 2.6,-1.4 3.2,-1.5c0.7,-0.1 1.2,-0.2 1.7,-0.2c0.4,-0.1 2.8,-0.1 7.2,-0.1v21.9V418zM294.8,396.7l-0.9,-0.1c-1.3,-0.1 -2.5,0.3 -3.8,1c-1.3,0.8 -2.6,1.2 -4.1,1.3v11.8v1.9h8.7V396.7z"
-        android:fillColor="#126A8F"/>
+        android:pathData="M66.09,42.54a2.34,2.34 0,0 1,-4.07 2.31L45.14,15.54a2.33,2.33 0,1 1,4 -2.34ZM168.4,45.14a2.32,2.32 0,1 1,2.31 4l-29.27,16.92a2.33,2.33 0,0 1,-2.34 -4ZM181.56,89.63a2.34,2.34 0,0 1,0 4.68h-33.8a2.34,2.34 0,0 1,0 -4.68ZM36.16,89.63a2.34,2.34 0,0 1,0 4.68L2.34,94.31a2.34,2.34 0,0 1,0 -4.68ZM89.62,2.34a2.34,2.34 0,0 1,4.68 0v33.83a2.34,2.34 0,0 1,-4.68 0ZM44.8,62.05a2.33,2.33 0,1 1,-2.34 4l-29.27,-16.92a2.32,2.32 0,1 1,2.31 -4ZM134.74,13.19A2.34,2.34 0,1 1,138.8 15.54l-16.91,29.3a2.36,2.36 0,0 1,-3.21 0.83,2.31 2.31,0 0,1 -0.83,-3.17Z"
+        android:fillColor="#c92518"/>
   </group>
 </vector>
