--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="24dp"
+        android:background="@color/gray"
         tools:context=".fragments.profile.ProfileFragment">
 
         <com.facebook.shimmer.ShimmerFrameLayout
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:visibility="visible"
+            android:visibility="gone"
             tools:layout_editor_absoluteX="24dp"
             tools:layout_editor_absoluteY="24dp">
 
@@ -33,26 +33,73 @@
             android:id="@+id/profile_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
+            android:visibility="visible"
             tools:layout_editor_absoluteX="24dp"
             tools:layout_editor_absoluteY="24dp">
 
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/header"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:background="@color/sky_blue_200"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/user_imageView"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/cardView"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_marginTop="32dp"
+                app:layout_constraintEnd_toEndOf="@+id/header"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/cardView"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.19"
-                android:src="@drawable/upload_photo" />
+                app:layout_constraintStart_toStartOf="@+id/header"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/user_name_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/nahdi"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                app:layout_constraintEnd_toEndOf="@+id/user_imageView"
+                app:layout_constraintStart_toStartOf="@+id/user_imageView"
+                app:layout_constraintTop_toBottomOf="@+id/user_imageView"
+                tools:text="أحمد فارس" />
+
+            <ImageView
+                android:id="@+id/user_phone_imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:src="@drawable/ic_phone"
+                app:layout_constraintBottom_toBottomOf="@+id/user_phone_textView"
+                app:layout_constraintStart_toEndOf="@+id/user_phone_textView"
+                app:layout_constraintTop_toTopOf="@+id/user_phone_textView"
+                app:tint="@color/white" />
+
+            <TextView
+                android:id="@+id/user_phone_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/katibeh"
+                android:textColor="@color/lightGray"
+                android:textSize="28sp"
+                app:layout_constraintEnd_toEndOf="@+id/user_name_textView"
+                app:layout_constraintStart_toStartOf="@+id/user_name_textView"
+                app:layout_constraintTop_toBottomOf="@+id/user_name_textView"
+                tools:text="+201061462749" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:elevation="5dp"
+                android:layout_marginHorizontal="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -65,8 +112,9 @@
                     android:layout_height="match_parent">
 
 
+
                     <ImageView
-                        android:id="@+id/user_name_imageView"
+                        android:id="@+id/user_ssn_imageView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="24dp"
@@ -76,30 +124,6 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@drawable/ic_profile"
-                        app:tint="@color/darkGray" />
-
-                    <TextView
-                        android:id="@+id/user_name_textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:fontFamily="@font/katibeh"
-                        android:textColor="@color/black"
-                        android:textSize="30sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/user_name_imageView"
-                        app:layout_constraintEnd_toStartOf="@+id/user_name_imageView"
-                        app:layout_constraintTop_toTopOf="@+id/user_name_imageView"
-                        tools:text="Ahmed Fares" />
-
-                    <ImageView
-                        android:id="@+id/user_ssn_imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        app:layout_constraintEnd_toEndOf="@+id/user_name_imageView"
-                        app:layout_constraintStart_toStartOf="@+id/user_name_imageView"
-                        app:layout_constraintTop_toBottomOf="@+id/user_name_imageView"
                         app:srcCompat="@drawable/ic_id_card"
                         app:tint="@color/darkGray" />
 
@@ -116,29 +140,7 @@
                         app:layout_constraintTop_toTopOf="@+id/user_ssn_imageView"
                         tools:text="2982222224535" />
 
-                    <ImageView
-                        android:id="@+id/user_phone_imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        android:src="@drawable/ic_phone"
-                        app:layout_constraintEnd_toEndOf="@+id/user_ssn_imageView"
-                        app:layout_constraintStart_toStartOf="@+id/user_ssn_imageView"
-                        app:layout_constraintTop_toBottomOf="@+id/user_ssn_imageView"
-                        app:tint="@color/darkGray" />
 
-                    <TextView
-                        android:id="@+id/user_phone_textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:fontFamily="@font/katibeh"
-                        android:textColor="@color/blue"
-                        android:textSize="28sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/user_phone_imageView"
-                        app:layout_constraintEnd_toStartOf="@+id/user_phone_imageView"
-                        app:layout_constraintTop_toTopOf="@+id/user_phone_imageView"
-                        tools:text="+201061462749" />
 
                     <ImageView
                         android:id="@+id/user_closePerson_phone_imageView"
@@ -147,10 +149,9 @@
                         android:layout_marginTop="24dp"
                         android:layout_marginBottom="32dp"
                         android:src="@drawable/ic_close_persone"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@+id/user_phone_imageView"
-                        app:layout_constraintStart_toStartOf="@+id/user_phone_imageView"
-                        app:layout_constraintTop_toBottomOf="@+id/user_phone_imageView"
+                        app:layout_constraintEnd_toEndOf="@+id/user_ssn_imageView"
+                        app:layout_constraintStart_toStartOf="@+id/user_ssn_imageView"
+                        app:layout_constraintTop_toBottomOf="@+id/user_ssn_imageView"
                         app:tint="@color/darkGray" />
 
                     <TextView
