--- a/app/src/main/res/layout/history_row_layout.xml
+++ b/app/src/main/res/layout/history_row_layout.xml
@@ -34,7 +34,7 @@
                 android:background="@color/white">
 
                 <View
-                    android:id="@+id/gray_background"
+                    android:id="@+id/backgroundView"
                     android:layout_width="110dp"
                     android:layout_height="120dp"
                     android:layout_marginEnd="8dp"
@@ -51,8 +51,8 @@
                     android:layout_height="70dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/gray_background"
-                    app:layout_constraintTop_toTopOf="@+id/gray_background"
+                    app:layout_constraintStart_toStartOf="@+id/backgroundView"
+                    app:layout_constraintTop_toTopOf="@+id/backgroundView"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <TextView
@@ -68,7 +68,7 @@
                     android:text="@{request.description}"
                     android:textColor="@color/black"
                     android:textSize="18sp"
-                    app:layout_constraintEnd_toStartOf="@+id/gray_background"
+                    app:layout_constraintEnd_toStartOf="@+id/backgroundView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -85,7 +85,7 @@
                     android:textColor="@color/yellow"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/gray_background"
+                    app:layout_constraintEnd_toStartOf="@+id/backgroundView"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/description_textview" />
