--- a/app/src/main/res/layout/request_row_layout.xml
+++ b/app/src/main/res/layout/request_row_layout.xml
@@ -32,14 +32,13 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white">
+                android:background="@color/green">
 
                 <View
-                    android:id="@+id/gray_background"
+                    android:id="@+id/backgroundView"
                     android:layout_width="110dp"
                     android:layout_height="120dp"
                     android:layout_marginEnd="8dp"
-                    android:background="@color/lightGray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -52,44 +51,41 @@
                     android:layout_height="70dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/gray_background"
-                    app:layout_constraintTop_toTopOf="@+id/gray_background"
+                    app:layout_constraintStart_toStartOf="@+id/backgroundView"
+                    app:layout_constraintTop_toTopOf="@+id/backgroundView"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <TextView
-                    android:id="@+id/description_tv"
+                    android:id="@+id/request_status_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
-                    android:layout_marginTop="12dp"
                     android:layout_marginEnd="8dp"
                     android:ellipsize="end"
-                    android:fontFamily="@font/katibeh"
+                    android:fontFamily="@font/nahdi"
                     android:maxLines="3"
                     android:text="@{request.description}"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
-                    app:layout_constraintEnd_toStartOf="@+id/gray_background"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/backgroundView"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.36" />
 
                 <TextView
-                    android:id="@+id/request_status_tv"
+                    android:id="@+id/timestamp_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
-                    android:fontFamily="@font/katibeh"
-                    android:text="@{request.status}"
-                    android:textColor="@color/yellow"
+                    android:fontFamily="@font/nahdi"
+                    tools:text="May 3, 2910"
+                    simpleDateFormat="@{request.created}"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/gray_background"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/description_tv" />
+                    app:layout_constraintStart_toStartOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
