--- a/app/src/main/res/navigation/savior_nav.xml
+++ b/app/src/main/res/navigation/savior_nav.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_requestsFragment_to_requestDetailesFragment"
             app:destination="@id/requestDetailesFragment" />
+        <action
+            android:id="@+id/action_requestsFragment_to_medicalInfoFragment"
+            app:destination="@id/medicalInfoFragment" />
     </fragment>
     <fragment
         android:id="@+id/requestDetailesFragment"
@@ -28,4 +31,9 @@
             app:popUpTo="@id/requestDetailesFragment"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        android:id="@+id/medicalInfoFragment"
+        android:name="com.afares.emergency.MedicalInfoFragment"
+        android:label="fragment_medical_info"
+        tools:layout="@layout/fragment_medical_info" />
 </navigation>
