--- a/app/src/main/res/menu/medical_info_menu.xml
+++ b/app/src/main/res/menu/medical_info_menu.xml
@@ -2,12 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    
+
     <item
         android:id="@+id/medicalInfo_search"
         android:icon="@drawable/ic_search"
         android:iconTint="@color/white"
         android:title="@string/search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom"
         tools:targetApi="o" />
 
