--- a/app/src/main/res/layout/history_row_layout.xml
+++ b/app/src/main/res/layout/history_row_layout.xml
@@ -31,14 +31,13 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white">
+                getRequestStatusBackground="@{request.status}">
 
                 <View
                     android:id="@+id/backgroundView"
                     android:layout_width="110dp"
                     android:layout_height="120dp"
                     android:layout_marginEnd="8dp"
-                    android:background="@color/lightGray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -46,7 +45,7 @@
 
                 <ImageView
                     android:id="@+id/history_type_image"
-                    loadImageType="@{request.type}"
+                    getRequestStatusBackground="@{request.status}"
                     android:layout_width="60dp"
                     android:layout_height="70dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -56,39 +55,36 @@
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <TextView
-                    android:id="@+id/description_textview"
+                    android:id="@+id/request_status_textView"
+                    getRequestStatusBackground="@{request.status}"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
-                    android:layout_marginTop="12dp"
                     android:layout_marginEnd="8dp"
                     android:ellipsize="end"
-                    android:fontFamily="@font/katibeh"
+                    android:fontFamily="@font/nahdi"
                     android:maxLines="3"
-                    android:text="@{request.description}"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    app:layout_constraintEnd_toStartOf="@+id/backgroundView"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/request_status_textview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:fontFamily="@font/katibeh"
-                    android:text="@{request.status}"
-                    android:textColor="@color/yellow"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/backgroundView"
-                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/description_textview" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.36" />
+
+                <TextView
+                    android:id="@+id/timestamp_textView"
+                    simpleDateFormat="@{request.created}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/nahdi"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:text="May 3, 2910" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
