--- a/app/src/main/res/layout/request_row_layout.xml
+++ b/app/src/main/res/layout/request_row_layout.xml
@@ -32,7 +32,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/green">
+                getRequestStatusBackground="@{request.status}">
 
                 <View
                     android:id="@+id/backgroundView"
@@ -46,7 +46,7 @@
 
                 <ImageView
                     android:id="@+id/request_type_image"
-                    loadImageType="@{request.type}"
+                    getRequestStatusBackground="@{request.status}"
                     android:layout_width="60dp"
                     android:layout_height="70dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -64,7 +64,7 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/nahdi"
                     android:maxLines="3"
-                    android:text="@{request.description}"
+                    getRequestStatusBackground="@{request.status}"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
