--- a/app/src/main/res/layout/fragment_medical_history.xml
+++ b/app/src/main/res/layout/fragment_medical_history.xml
@@ -9,7 +9,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/gray"
+        android:background="@color/lightGray"
         android:padding="24dp"
         android:scrollIndicators="none">
 
