--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/gray"
+        android:background="@color/lightGray"
         tools:context=".fragments.profile.ProfileFragment">
 
         <com.facebook.shimmer.ShimmerFrameLayout
@@ -97,14 +97,14 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:elevation="5dp"
+                android:layout_height="0dp"
                 android:layout_marginHorizontal="12dp"
+                android:elevation="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/header"
                 app:layout_constraintVertical_bias="0.65">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -112,18 +112,15 @@
                     android:layout_height="match_parent">
 
 
-
                     <ImageView
                         android:id="@+id/user_ssn_imageView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.71"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.0"
+                        android:layout_marginTop="16dp"
+                        app:layout_constraintEnd_toEndOf="@+id/user_ssn"
+                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintStart_toStartOf="@+id/user_ssn"
+                        app:layout_constraintTop_toBottomOf="@+id/user_ssn"
                         app:srcCompat="@drawable/ic_id_card"
                         app:tint="@color/darkGray" />
 
@@ -133,7 +130,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/katibeh"
-                        android:textColor="@color/black"
+                        android:textColor="@color/darkGray"
                         android:textSize="28sp"
                         app:layout_constraintBottom_toBottomOf="@+id/user_ssn_imageView"
                         app:layout_constraintEnd_toStartOf="@+id/user_ssn_imageView"
@@ -141,17 +138,16 @@
                         tools:text="2982222224535" />
 
 
-
                     <ImageView
                         android:id="@+id/user_closePerson_phone_imageView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        android:layout_marginBottom="32dp"
+                        android:layout_marginTop="16dp"
                         android:src="@drawable/ic_close_persone"
-                        app:layout_constraintEnd_toEndOf="@+id/user_ssn_imageView"
-                        app:layout_constraintStart_toStartOf="@+id/user_ssn_imageView"
-                        app:layout_constraintTop_toBottomOf="@+id/user_ssn_imageView"
+                        app:layout_constraintEnd_toEndOf="@+id/user_closePerson_phone"
+                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintStart_toStartOf="@+id/user_closePerson_phone"
+                        app:layout_constraintTop_toBottomOf="@+id/user_closePerson_phone"
                         app:tint="@color/darkGray" />
 
                     <TextView
@@ -160,12 +156,58 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/katibeh"
-                        android:textColor="@color/blue"
+                        android:textColor="@color/darkGray"
                         android:textSize="28sp"
                         app:layout_constraintBottom_toBottomOf="@+id/user_closePerson_phone_imageView"
                         app:layout_constraintEnd_toStartOf="@+id/user_closePerson_phone_imageView"
                         app:layout_constraintTop_toTopOf="@+id/user_closePerson_phone_imageView"
                         tools:text="+201061462749" />
+
+                    <TextView
+                        android:id="@+id/user_ssn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="32dp"
+                        android:layout_marginEnd="16dp"
+                        android:fontFamily="@font/nahdi"
+                        android:text="رقم الهوية"
+                        android:textColor="@color/blue"
+                        android:textSize="22sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.77"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/user_closePerson_phone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:fontFamily="@font/nahdi"
+                        android:text="رقم شخص مقرب"
+                        android:textColor="@color/blue"
+                        android:textSize="22sp"
+                        app:layout_constraintEnd_toEndOf="@+id/user_ssn"
+                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/user_ssn_imageView" />
+
+                    <Button
+                        android:id="@+id/sign_out_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:background="#00FFFFFF"
+                        android:drawableEnd="@drawable/ic_sign_out"
+                        android:fontFamily="@font/nahdi"
+                        android:text="@string/sign_out"
+                        android:textColor="@color/red"
+                        android:textSize="20sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/user_closePerson_phone_textView" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
