--- a/app/src/main/res/navigation/home_nav.xml
+++ b/app/src/main/res/navigation/home_nav.xml
@@ -8,7 +8,11 @@
         android:id="@+id/profileFragment"
         android:name="com.afares.emergency.fragments.profile.ProfileFragment"
         android:label="@string/user_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_mainActivity"
+            app:destination="@id/mainActivity" />
+    </fragment>
     <fragment
         android:id="@+id/helpFragment"
         android:name="com.afares.emergency.fragments.help.HelpFragment"
@@ -38,4 +42,9 @@
             app:popUpTo="@id/medicalHistoryFragment"
             app:popUpToInclusive="true" />
     </fragment>
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.afares.emergency.MainActivity"
+        android:label="activity_main"
+        tools:layout="@layout/activity_main" />
 </navigation>
