savior requests filter to user city

--- a/app/src/main/res/layout/fragment_medical_info.xml
+++ b/app/src/main/res/layout/fragment_medical_info.xml
@@ -22,7 +22,7 @@
             android:background="@color/gray"
             android:elevation="5dp"
             android:padding="8dp"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
