--- a/app/src/main/res/navigation/savior_nav.xml
+++ b/app/src/main/res/navigation/savior_nav.xml
@@ -18,7 +18,9 @@
             app:destination="@id/medicalInfoFragment" />
         <action
             android:id="@+id/action_requestsFragment_to_mainActivity2"
-            app:destination="@id/mainActivity2" />
+            app:destination="@id/mainActivity2"
+            app:popUpTo="@id/requestsFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/requestDetailesFragment"
