--- a/app/src/main/res/navigation/savior_nav.xml
+++ b/app/src/main/res/navigation/savior_nav.xml
@@ -35,6 +35,10 @@
             app:destination="@id/requestsFragment"
             app:popUpTo="@id/requestDetailesFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="recipientMail"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/medicalInfoFragment"
