send report with saviorInfo

--- a/app/src/main/res/navigation/savior_nav.xml
+++ b/app/src/main/res/navigation/savior_nav.xml
@@ -39,6 +39,9 @@
             android:name="recipientMail"
             app:argType="string"
             app:nullable="true" />
+        <argument
+            android:name="saviorData"
+            app:argType="com.afares.emergency.data.model.User" />
     </fragment>
     <fragment
         android:id="@+id/medicalInfoFragment"
