--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -24,18 +24,26 @@
                 android:padding="24dp">
 
 
-                <ImageView
-                    android:id="@+id/app_icon"
-                    android:layout_width="150dp"
-                    android:layout_height="150sp"
-                    android:src="@drawable/ic_emergency_app"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_marginTop="32dp"
+                    android:src="@drawable/profile_placeholder"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.126" />
-
+                <ImageButton
+                    android:id="@+id/add_userImage"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/button_add_shape"
+                    app:layout_constraintBottom_toBottomOf="@+id/profile_image"
+                    app:layout_constraintEnd_toEndOf="@+id/profile_image"
+                    app:srcCompat="@drawable/ic_add" />
                 <EditText
                     android:id="@+id/name_et"
                     android:layout_width="0dp"
@@ -50,7 +58,7 @@
                     android:paddingEnd="24dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/app_icon" />
+                    app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
                 <EditText
                     android:id="@+id/ssn_et"
