clean architecture of application

--- a/app/src/main/res/layout/fragment_medical_info.xml
+++ b/app/src/main/res/layout/fragment_medical_info.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:background="@color/lightGray"
         android:padding="12dp"
-        tools:context=".MedicalInfoFragment">
+        tools:context=".ui.fragments.medicalinfo.MedicalInfoFragment">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
