--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/lightGray"
-        tools:context=".fragments.history.HistoryFragment">
+        tools:context=".ui.fragments.history.HistoryFragment">
 
         <com.facebook.shimmer.ShimmerFrameLayout
             android:id="@+id/placeholder_history_row"
