--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:background="@color/gray"
         android:padding="24dp"
-        tools:context=".fragments.login.LoginFragment">
+        tools:context=".ui.fragments.login.LoginFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/login_container"
@@ -173,7 +173,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView_otp" />
 
 
-            <com.afares.emergency.ui.OtpEditText
+            <com.afares.emergency.ui.view.OtpEditText
                 android:id="@+id/otp_et"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
