--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ic_splash_background"
-    tools:context=".fragments.splash.SplashFragment">
+    tools:context=".ui.fragments.splash.SplashFragment">
 
 
     <ImageView
