--- a/app/src/main/res/navigation/auth_nav.xml
+++ b/app/src/main/res/navigation/auth_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/splashFragment"
-        android:name="com.afares.emergency.fragments.splash.SplashFragment"
+        android:name="com.afares.emergency.ui.fragments.splash.SplashFragment"
         android:label="fragment_splash"
         tools:layout="@layout/fragment_splash" >
         <action
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.afares.emergency.fragments.login.LoginFragment"
+        android:name="com.afares.emergency.ui.fragments.login.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login">
         <action
@@ -57,12 +57,12 @@
     </fragment>
     <activity
         android:id="@+id/homeActivity"
-        android:name="com.afares.emergency.HomeActivity"
+        android:name="com.afares.emergency.ui.activity.HomeActivity"
         android:label="activity_home"
         tools:layout="@layout/activity_home" />
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="com.afares.emergency.fragments.signup.SignUpFragment"
+        android:name="com.afares.emergency.ui.fragments.signup.SignUpFragment"
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up">
         <action
@@ -83,12 +83,12 @@
     </fragment>
     <activity
         android:id="@+id/saviorActivity"
-        android:name="com.afares.emergency.SaviorActivity"
+        android:name="com.afares.emergency.ui.activity.SaviorActivity"
         android:label="activity_savior"
         tools:layout="@layout/activity_savior" />
     <fragment
         android:id="@+id/userTypeFragment"
-        android:name="com.afares.emergency.fragments.usertype.UserTypeFragment"
+        android:name="com.afares.emergency.ui.fragments.usertype.UserTypeFragment"
         android:label="fragment_user_type"
         tools:layout="@layout/fragment_user_type" >
         <action
