--- a/app/src/main/res/navigation/savior_nav.xml
+++ b/app/src/main/res/navigation/savior_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/requestsFragment"
-        android:name="com.afares.emergency.fragments.requests.RequestsFragment"
+        android:name="com.afares.emergency.ui.fragments.requests.RequestsFragment"
         android:label="الطلبات"
         tools:layout="@layout/fragment_requests">
         <action
@@ -24,7 +24,7 @@
     </fragment>
     <fragment
         android:id="@+id/requestDetailesFragment"
-        android:name="com.afares.emergency.fragments.requestdetails.RequestDetailsFragment"
+        android:name="com.afares.emergency.ui.fragments.requestdetails.RequestDetailsFragment"
         android:label="تفاصيل الطلب"
         tools:layout="@layout/fragment_request_detailes">
         <argument
@@ -45,7 +45,7 @@
     </fragment>
     <fragment
         android:id="@+id/medicalInfoFragment"
-        android:name="com.afares.emergency.MedicalInfoFragment"
+        android:name="com.afares.emergency.ui.fragments.medicalinfo.MedicalInfoFragment"
         android:label="السجل المرضي"
         tools:layout="@layout/fragment_medical_info">
         <argument
@@ -58,7 +58,7 @@
     </fragment>
     <activity
         android:id="@+id/mainActivity2"
-        android:name="com.afares.emergency.MainActivity"
+        android:name="com.afares.emergency.ui.activity.MainActivity"
         android:label="activity_main"
         tools:layout="@layout/activity_main" />
 </navigation>
