update medical information layout design and calculate age from date of birth

--- a/app/src/main/res/layout/fragment_medical_info.xml
+++ b/app/src/main/res/layout/fragment_medical_info.xml
@@ -79,7 +79,7 @@
                 android:src="@drawable/ic_checkmark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:tint="@color/darkGray" />
+                app:tint="@color/mediumGray" />
 
             <TextView
                 android:id="@+id/diabetic_tv"
@@ -103,7 +103,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/diabetic_tv"
                 app:layout_constraintEnd_toStartOf="@+id/diabetic_tv"
                 app:layout_constraintTop_toTopOf="@+id/diabetic_tv"
-                app:tint="@color/darkGray" />
+                app:tint="@color/mediumGray" />
 
             <TextView
                 android:id="@+id/pressure_patient_tv"
@@ -127,7 +127,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/pressure_patient_tv"
                 app:layout_constraintEnd_toStartOf="@+id/pressure_patient_tv"
                 app:layout_constraintTop_toTopOf="@+id/pressure_patient_tv"
-                app:tint="@color/darkGray" />
+                app:tint="@color/mediumGray" />
 
             <TextView
                 android:id="@+id/heart_patient_tv"
